// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WatchlistButton > Should match snapshot when movie is in watchlist 1`] = `
<div>
  <div
    class="_smallContainer_0a1d77"
    data-testid="watchlist-button"
  >
    <button
      aria-label="Remove movie from watchlist"
      aria-pressed="true"
      class="MuiButtonBase-root MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-primary css-xtj3ox-MuiButtonBase-root-MuiToggleButton-root"
      data-testid="watchlist-toggle-button"
      tabindex="0"
      title="Remove movie from watchlist"
      type="button"
      value="check"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium _remove_0a1d77 css-1umw9bq-MuiSvgIcon-root"
        data-testid="BookmarkRemoveIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 7h-6V5h6zm-2 3.9c-.32.07-.66.1-1 .1-2.76 0-5-2.24-5-5 0-1.13.37-2.16 1-3H7c-1.1 0-2 .9-2 2v16l7-3 7 3z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`WatchlistButton > Should match snapshot when movie is not in watchlist 1`] = `
<div>
  <div
    class="_smallContainer_0a1d77"
    data-testid="watchlist-button"
  >
    <button
      aria-label="Add movie to watchlist"
      aria-pressed="false"
      class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-primary css-xtj3ox-MuiButtonBase-root-MuiToggleButton-root"
      data-testid="watchlist-toggle-button"
      tabindex="0"
      title="Add movie to watchlist"
      type="button"
      value="check"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium _add_0a1d77 css-1umw9bq-MuiSvgIcon-root"
        data-testid="BookmarkAddIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 7h-2v2h-2V7h-2V5h2V3h2v2h2zm-2 14-7-3-7 3V5c0-1.1.9-2 2-2h7c-.63.84-1 1.87-1 3 0 2.76 2.24 5 5 5 .34 0 .68-.03 1-.1z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`WatchlistButton > Should match snapshot when style prop is big 1`] = `
<div>
  <div
    class="_bigContainer_0a1d77"
    data-testid="watchlist-button"
  >
    <button
      aria-label="Remove movie from watchlist"
      aria-pressed="true"
      class="MuiButtonBase-root MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-primary css-xtj3ox-MuiButtonBase-root-MuiToggleButton-root"
      data-testid="watchlist-toggle-button"
      tabindex="0"
      title="Remove movie from watchlist"
      type="button"
      value="check"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium _remove_0a1d77 css-1umw9bq-MuiSvgIcon-root"
        data-testid="BookmarkRemoveIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 7h-6V5h6zm-2 3.9c-.32.07-.66.1-1 .1-2.76 0-5-2.24-5-5 0-1.13.37-2.16 1-3H7c-1.1 0-2 .9-2 2v16l7-3 7 3z"
        />
      </svg>
      <span
        class="_text_0a1d77"
      >
        Remove from watchlist
      </span>
    </button>
  </div>
</div>
`;
